refactor: use wirespec for api definitions